# fcp-python

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
src/fcp_python/: bridge.py  main.py
src/fcp_python/domain/: mutation.py  verbs.py
tests/: test_mutation.py  test_verbs.py
