[project]
name = "fcp-python"
version = "0.1.6"
description = "Python Code Intelligence FCP — semantic Python code operations for LLMs via pylsp"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fcp-core>=0.1.20",
    "fastmcp>=3.0",
    "python-lsp-server[rope]>=1.12",
]

[project.scripts]
fcp-python = "fcp_python.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcp_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
src = ["src"]
